--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Something great is coming soon!!!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Liz's website</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <p>
+        Something great is coming soon!!!
+    </p>
+  </body>
+</html>
