Fixed whitespace to the right of profile picture

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 											</a>
 										</li><!-- / li -->
 										<li>
-											<a href="https://www.instagram.com/plant_strong_liz/?hl=en">
-												<i  class="fa fa-instagram" aria-hidden="true"></i>
+											<a href="https://lizwilson00.github.io/">
+												<i  class="fa fa-globe" aria-hidden="true"></i>
 											</a>
-										</li><!-- / li -->
+										</li>
 										
 										
 									</ul><!-- / ul -->
