--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 										</h4>
 										<h5>worldwide</h5>
 										<p class="description">
-											1.5 years working through the Core Curriculum at <a href="https://launchschool.com/">Launch School</a> where I learned software fundamentals, Ruby, JavaScript, Git, HTML, and CSS.  I completed a Data Engineering Bootcamp and a Machine Learning Bootcamp through <a href="https://datatalks.club/">Data Talks Club</a> and completed a Certificate in Data Analysis with Python at <a href="https://www.freecodecamp.org/">freecodecamp</a>. 
+											1.5 years working through the Core Curriculum at <a href="https://launchschool.com/">Launch School</a> focusing on software fundamentals, Ruby, JavaScript, Git, HTML, and CSS.  I completed a Data Engineering Bootcamp and a Machine Learning Bootcamp through <a href="https://datatalks.club/">Data Talks Club</a> and completed a Certificate in Data Analysis with Python at <a href="https://www.freecodecamp.org/">freecodecamp</a>. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
