Another small edit

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 														<p class="description">
 															<ul>
 																<li class="desc-bullet">
-																	Launch School: <a href="https://launchschool.com/courses">Ruby track core curriculum</a>, mastery based approach to to learning software fundamentals, I learned Ruby and JavaScript in depth
+																	Launch School: <a href="https://launchschool.com/courses">Ruby track core curriculum</a>, mastery based approach to to learning software fundamentals, using Ruby and JavaScript
 																</li>
 																<li class="desc-bullet">
 																	<a href="https://www.freecodecamp.org/">Free Code Camp</a>: Python, Pandas, Numpy, Matplotlib, and received <a href="https://www.freecodecamp.org/certification/lizwilson00/data-analysis-with-python-v7">Data Analysis with Python Certificate</a>
