--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 																<li class="desc-bullet">
 																	Bloomberg Bureau of National Affairs (Arlington, VA): Conducted business process meetings to review all BBNA HR processes, created use cases that documented all
 																	processes and dependencies, identified and documented gaps for 54 HR and Payroll processes between
-																	Bloomberg and BBNA plus its 5 subsidiaries in prepation for a conversion to WorkDay
+																	Bloomberg and BBNA plus its 5 subsidiaries in preparation for a conversion to WorkDay
 																</li>
 															</ul>															
 														</p>
